2001-04-28  Derek Price  <oberon@umich.edu>

	* getopt.h: #define new names for functions and variables when they
	might conflict with system definitions (namely on Mac OS X 10.1 with
	the most recent dev packages - This should be removable after the Mac
	dev packages are fixed.).
	* regex.h: Ditto.
	* Makefile.am (libcvs_a_SOURCES): Remove fnmatch.h.
	* Makefile.in: Regenerated.

2002-04-20  Larry Jones  <larry.jones@sdrc.com>

	* Makefile.am (libcvs_a_SOURCES): Add getpagesize.h.
	* Makefile.in: Regenerated.

2001-09-18  Derek Price  <dprice@collab.net>

	* fnmatch.c: The header file for a system function we're replacing with
	our own should be #included using double quotes.
	(Patch from Corey Minyard  <minyard@acm.org> via
	Alexey Mahotkin <alexm@hsys.msk.ru>.)

2001-09-04  Derek Price  <dprice@collab.net>

	* Makefile.in: Regenerated with automake 1.5.

2001-08-09  Derek Price  <dprice@collab.net>

	* getpagesize.h: Only include sys/param.h when HAVE_SYS_PARAM_H has
	been defined by configure.

2001-08-07  Derek Price  <dprice@collab.net>

	* build_lib.com: Verify.
	* getdate.y: Move the include of xtime.h out from underneath the ifdef
	so that it is always included.
	(Patch from Mike Marciniszyn <Mike.Marciniszyn@sanchez.com>.)

	* getdate.c: Regenerated.

2001-08-06  Derek Price  <dprice@collab.net>

	* Makefile.in: Regenerated.

2001-07-05  Larry Jones  <larry.jones@sdrc.com>

	* getpagesize.h: New file to define getpagesize() for systems that
	don't already have it.
	* valloc.c (valloc): Use it.

2001-07-04  Derek Price  <dprice@collab.net>

	* Makefile.in: Regenerated with new Automake release candidate 1.4h.

2001-06-28  Derek Price  <dprice@collab.net>

	* Makefile.in: Regenerated with new version of Automake.

2001-06-15  Derek Price  <dprice@collab.net>

	* xselect.h: Don't include xtime.h.
	(Thanks to Martin Neitzel <neitzel@sco.gaertner.de>.)

2001-04-25  Derek Price  <dprice@collab.net>
